Fixed the centering of the iframe and modified width and height of video so it covers entire page

--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,8 @@
 }
 
 .grid {
+	margin-left: auto;
+	margin-right: auto;
 	display: grid;
 	grid-template-columns: 1fr 1fr 1fr;
 	text-align: center;
